// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contact /> renders OK (compact mode) 1`] = `
<ul
  class="block"
  data-testid="contact"
>
  <li>
    <a
      data-testid="contactEmail"
      href="tel:1234567890"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
        />
      </svg>
       
      1234567890
    </a>
  </li>
  <li>
    <a
      data-testid="contactEmail"
      href="mailto:kayak@example.com"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
        />
        <polyline
          points="22,6 12,13 2,6"
        />
      </svg>
       
      kayak@example.com
    </a>
  </li>
  <li
    class="!whitespace-normal flex flex-row flex-nowrap align-middle"
    data-testid="contactAddress"
    id="address"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
    <span>
      Example City
      , 
      California,
       
      US
    </span>
  </li>
</ul>
`;

exports[`<Contact /> renders OK 1`] = `
<ul
  class="block"
  data-testid="contact"
>
  <li>
    <a
      data-testid="contactEmail"
      href="mailto:john@gmail.com"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
        />
        <polyline
          points="22,6 12,13 2,6"
        />
      </svg>
       
      john@gmail.com
    </a>
  </li>
  <li
    class="!whitespace-normal flex flex-row flex-nowrap align-middle"
    data-testid="contactAddress"
    id="address"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
    <span>
      San Francisco
      , 
      California,
       
      US
    </span>
  </li>
</ul>
`;
